chore: refactor namespace and update test-secret.yaml namespace

--- a/apps/secrets/test/test-secret.yaml
+++ b/apps/secrets/test/test-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: test-secret
-    namespace: secrets
+    namespace: flux-system
 stringData:
     DATABASE_PASSWORD: ENC[AES256_GCM,data:z0t0tD+m4TwUTDKspMxSi67Qmv2T,iv:WSiaTqVNnT1I9o8ZFXdZqrEkT0EIKyvA2i+Po25yIr0=,tag:A5PNIt0T/QJFLFw1NcJbNw==,type:str]
 sops:
