--- a/cluster/apps.yaml
+++ b/cluster/apps.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
   name: apps
-  namespace: apps
+  namespace: flux-system
 spec:
   interval: 10m
   sourceRef:
@@ -14,3 +14,4 @@ spec:
     provider: sops
     secretRef:
       name: sops-age-1
+  targetNamespace: apps
