--- a/apps/network/multus/kustomization.yaml
+++ b/apps/network/multus/kustomization.yaml
@@ -2,6 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - network-policy.yaml
   - multus-daemonset-thick.yaml
 patchesStrategicMerge:
   - install-cni-patch.yaml
