fix: update the clusterrole permissions to remove wildcards

--- a/apps/network/multus/multus-daemonset-thick.yaml
+++ b/apps/network/multus/multus-daemonset-thick.yaml
@@ -59,9 +59,15 @@ metadata:
 rules:
   - apiGroups: ["k8s.cni.cncf.io"]
     resources:
-      - '*'
+      - network-attachment-definitions
+      - network-attachment-definitions/status
     verbs:
-      - '*'
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - patch
   - apiGroups:
       - ""
     resources:
