--- a/apps/security/letsencrypt/kustomization.yaml
+++ b/apps/security/letsencrypt/kustomization.yaml
@@ -1,4 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - letsencrypt.yaml
+  - https://github.com/cert-manager/cert-manager/releases/download/v1.17.2/cert-manager.yaml
+  - letsencrypt-prod.yaml
