fix: correct multus to avoid race condition on reboot

--- a/apps/network/multus/multus-daemonset-thick.yaml
+++ b/apps/network/multus/multus-daemonset-thick.yaml
@@ -220,12 +220,12 @@ spec:
                   fieldPath: spec.nodeName
       initContainers:
         - name: install-multus-binary
-          image: ghcr.io/k8snetworkplumbingwg/multus-cni@sha256:8dbf2a493454fc65776f71402c4309a66620e1ce3d9b318c5428efb853e419e8
-          imagePullPolicy: Always
           command:
-            - "sh"
-            - "-c"
-            - "cp /usr/src/multus-cni/bin/multus-shim /host/opt/cni/bin/multus-shim && cp /usr/src/multus-cni/bin/passthru /host/opt/cni/bin/passthru"
+            - "/usr/src/multus-cni/bin/install_multus"
+            - "-d"
+            - "/host/opt/cni/bin"
+            - "-t"
+            - "thick"
           resources:
             requests:
               cpu: "10m"
