--- a/apps/network/multus/multus-daemonset-thick.yaml
+++ b/apps/network/multus/multus-daemonset-thick.yaml
@@ -141,19 +141,16 @@ metadata:
   annotations:
     checkov.io/skip1: "CKV_K8S_8"
     checkov.io/skip2: "CKV_K8S_9"
-    checkov.io/skip3: "CKV_K8S_14"
-    checkov.io/skip4: "CKV_K8S_15"
-    checkov.io/skip5: "CKV_K8S_16"
-    checkov.io/skip6: "CKV_K8S_20"
-    checkov.io/skip7: "CKV_K8S_22"
-    checkov.io/skip8: "CKV_K8S_23"
-    checkov.io/skip9: "CKV_K8S_28"
-    checkov.io/skip10: "CKV_K8S_29"
-    checkov.io/skip11: "CKV_K8S_31"
-    checkov.io/skip12: "CKV_K8S_37"
-    checkov.io/skip13: "CKV_K8S_38"
-    checkov.io/skip14: "CKV_K8S_40"
-    checkov.io/skip15: "CKV_K8S_43"
+    checkov.io/skip3: "CKV_K8S_16"
+    checkov.io/skip4: "CKV_K8S_20"
+    checkov.io/skip5: "CKV_K8S_22"
+    checkov.io/skip6: "CKV_K8S_23"
+    checkov.io/skip7: "CKV_K8S_28"
+    checkov.io/skip8: "CKV_K8S_29"
+    checkov.io/skip9: "CKV_K8S_31"
+    checkov.io/skip10: "CKV_K8S_37"
+    checkov.io/skip11: "CKV_K8S_38"
+    checkov.io/skip12: "CKV_K8S_40"
 spec:
   selector:
     matchLabels:
@@ -223,6 +220,8 @@ spec:
                   fieldPath: spec.nodeName
       initContainers:
         - name: install-multus-binary
+          image: ghcr.io/k8snetworkplumbingwg/multus-cni@sha256:8dbf2a493454fc65776f71402c4309a66620e1ce3d9b318c5428efb853e419e8
+          imagePullPolicy: Always
           command:
             - "/usr/src/multus-cni/bin/install_multus"
             - "-d"
