--- a/apps/network/multus/multus-daemonset-thick.yaml
+++ b/apps/network/multus/multus-daemonset-thick.yaml
@@ -142,15 +142,17 @@ metadata:
     checkov.io/skip1: "CKV_K8S_8"
     checkov.io/skip2: "CKV_K8S_9"
     checkov.io/skip3: "CKV_K8S_16"
-    checkov.io/skip4: "CKV_K8S_20"
-    checkov.io/skip5: "CKV_K8S_22"
-    checkov.io/skip6: "CKV_K8S_23"
-    checkov.io/skip7: "CKV_K8S_28"
-    checkov.io/skip8: "CKV_K8S_29"
-    checkov.io/skip9: "CKV_K8S_31"
-    checkov.io/skip10: "CKV_K8S_37"
-    checkov.io/skip11: "CKV_K8S_38"
-    checkov.io/skip12: "CKV_K8S_40"
+    checkov.io/skip4: "CKV_K8S_17"
+    checkov.io/skip5: "CKV_K8S_19"
+    checkov.io/skip6: "CKV_K8S_20"
+    checkov.io/skip7: "CKV_K8S_22"
+    checkov.io/skip8: "CKV_K8S_23"
+    checkov.io/skip9: "CKV_K8S_28"
+    checkov.io/skip10: "CKV_K8S_29"
+    checkov.io/skip11: "CKV_K8S_31"
+    checkov.io/skip12: "CKV_K8S_37"
+    checkov.io/skip13: "CKV_K8S_38"
+    checkov.io/skip14: "CKV_K8S_40"
 spec:
   selector:
     matchLabels:
@@ -164,8 +166,8 @@ spec:
         app: multus
         name: multus
     spec:
-      hostNetwork: false
-      hostPID: false
+      hostNetwork: true
+      hostPID: true
       tolerations:
         - operator: Exists
           effect: NoSchedule
