--- a/apps/secrets/newt/newt-secret.yaml
+++ b/apps/secrets/newt/newt-secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: newt-credentials
+    namespace: apps
 type: Opaque
 stringData:
     NEWT_ID: ENC[AES256_GCM,data:5P360lUtm8Pf9DHvkk8H,iv:dfH06CKaGPYuBqZtmo7+/jY9WZn2AxsIR2E6wdIl+uI=,tag:blYN4+FeDOJff3GaU0Y0TQ==,type:str]
