--- a/apps/network/newt/kustomization.yaml
+++ b/apps/network/newt/kustomization.yaml
@@ -1,7 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - network-policy.yaml
-  - multus
-  - metallb
-  - newt
+  - newt.yaml
