--- a/apps/miscellaneous/jellyfin/kustomization.yaml
+++ b/apps/miscellaneous/jellyfin/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
-  - secrets
-  - network
-  - security
-  - miscellaneous
+  - jellyfin-pv.yaml
+  - jellyfin-pvc.yaml
+  - jellyfin.yaml
+  - jellyfin-service.yaml
