--- a/apps/network/nginx-ingress/kustomization.yaml
+++ b/apps/network/nginx-ingress/kustomization.yaml
@@ -1,8 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - network-policy.yaml
-  - multus
-  - metallb
-  - newt
-  - nginx-ingress
+  - namespace.yaml
+  - helmrelease.yaml
+  - helmrepository.yaml
