--- a/apps/network/newt/newt.yaml
+++ b/apps/network/newt/newt.yaml
@@ -18,6 +18,7 @@ spec:
       labels:
         app: newt-tunnel
     spec:
+      hostNetwork: true
       automountServiceAccountToken: false
       securityContext:
         runAsNonRoot: true
@@ -41,6 +42,7 @@ spec:
                 - ALL
               add:
                 - CHOWN
+                - NET_ADMIN
             runAsNonRoot: true
             runAsUser: 10001                             
             seccompProfile:
