--- a/apps/miscellaneous/jellyfin/jellyfin.yaml
+++ b/apps/miscellaneous/jellyfin/jellyfin.yaml
@@ -58,10 +58,10 @@ spec:
         resources:
           requests:
             memory: "512Mi"
-            cpu:    "512Mi"
+            cpu:    "500m"
           limits:
             memory: "2Gi"
-            cpu:    "1Gi"
+            cpu:    "1"
       volumes:
       - name: jellyfin-pvc
         persistentVolumeClaim:
