--- a/apps/network/newt/newt.yaml
+++ b/apps/network/newt/newt.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: newt-tunnel
-  namespace: apps
+  namespace: newt
   annotations:
     checkov.io/skip1: "CKV_K8S_8"
     checkov.io/skip2: "CKV_K8S_9"
