--- a/apps/network/network-policy.yaml
+++ b/apps/network/network-policy.yaml
@@ -5,6 +5,7 @@ items:
     kind: NetworkPolicy
     metadata:
       name: default-deny-all
+      namespace: default
     spec:
       podSelector: {}
       policyTypes:
