fix: correct namespaceselector labels

--- a/apps/miscellaneous/jellyfin/network-policy.yaml
+++ b/apps/miscellaneous/jellyfin/network-policy.yaml
@@ -16,7 +16,7 @@ items:
       - from:
         - namespaceSelector:
             matchLabels:
-              app.kubernetes.io/name: ingress-nginx
+              kubernetes.io/metadata.name: ingress-nginx
         ports:
         - protocol: TCP
           port: 80
@@ -32,6 +32,16 @@ items:
       policyTypes:
       - Egress
       egress:
+      - to:
+        - namespaceSelector:
+            matchLabels:
+              kubernetes.io/metadata.name: ingress-nginx
+          podSelector:
+            matchLabels:
+              app.kubernetes.io/name: ingress-nginx
+        ports:
+        - protocol: TCP
+          port: 80
       - to:
         - namespaceSelector:
             matchLabels:
