--- a/apps/network/newt/network-policy.yaml
+++ b/apps/network/newt/network-policy.yaml
@@ -13,7 +13,7 @@ spec:
   - to:
     - namespaceSelector:
         matchLabels:
-          app.kubernetes.io/name: ingress-nginx
+          kubernetes.io/metadata.name: ingress-nginx
     ports:
     - protocol: TCP
       port: 80
