fix: correct ingress-nginx network policy

--- a/apps/network/nginx-ingress/network-policy.yaml
+++ b/apps/network/nginx-ingress/network-policy.yaml
@@ -25,6 +25,27 @@ items:
   - apiVersion: networking.k8s.io/v1
     kind: NetworkPolicy
     metadata:
+      name: allow-flux-to-nginx-webhook
+      namespace: ingress-nginx
+    spec:
+      podSelector:
+        matchLabels:
+          kubernetes.io/metadata.name: ingress-nginx
+      policyTypes:
+      - Ingress
+      ingress:
+      - from:
+        - namespaceSelector:
+            matchLabels:
+              kubernetes.io/metadata.name: flux-system
+        ports:
+        - protocol: TCP
+          port: 80
+        - protocol: TCP
+          port: 443
+  - apiVersion: networking.k8s.io/v1
+    kind: NetworkPolicy
+    metadata:
       name: allow-ingress-nginx-to-jellyfin
       namespace: ingress-nginx
     spec:
