--- a/apps/miscellaneous/jellyfin/network-policy.yaml
+++ b/apps/miscellaneous/jellyfin/network-policy.yaml
@@ -23,6 +23,27 @@ items:
   - apiVersion: networking.k8s.io/v1
     kind: NetworkPolicy
     metadata:
+      name: allow-flux-to-jellyfin
+      namespace: media
+    spec:
+      podSelector:
+        matchLabels:
+          app: jellyfin
+      policyTypes:
+      - Ingress
+      ingress:
+      - from:
+        - namespaceSelector:
+            matchLabels:
+              kubernetes.io/metadata.name: flux-system
+        ports:
+        - protocol: TCP
+          port: 80
+        - protocol: TCP
+          port: 443
+  - apiVersion: networking.k8s.io/v1
+    kind: NetworkPolicy
+    metadata:
       name: allow-jellyfin-to-coredns
       namespace: media
     spec:
