fix: flux pod selector in jellyfin and nginx

--- a/apps/miscellaneous/jellyfin/network-policy.yaml
+++ b/apps/miscellaneous/jellyfin/network-policy.yaml
@@ -26,9 +26,7 @@ items:
       name: allow-flux-to-jellyfin
       namespace: media
     spec:
-      podSelector:
-        matchLabels:
-          app: jellyfin
+      podSelector: {}
       policyTypes:
       - Ingress
       ingress:
