fix: ingress nginx network policy to ingress nginx

--- a/apps/network/nginx-ingress/network-policy.yaml
+++ b/apps/network/nginx-ingress/network-policy.yaml
@@ -60,6 +60,18 @@ items:
         ports:
         - protocol: TCP
           port: 80
+  - apiVersion: networking.k8s.io/v1
+    kind: NetworkPolicy
+    metadata:
+      name: allow-ingress-nginx-to-coredns
+      namespace: ingress-nginx
+    spec:
+      podSelector:
+        matchLabels:
+          kubernetes.io/metadata.name: ingress-nginx
+      policyTypes:
+      - Egress
+      egress:
       - to:
         - namespaceSelector:
             matchLabels:
@@ -72,3 +84,25 @@ items:
           port: 53
         - protocol: TCP
           port: 53
+  - apiVersion: networking.k8s.io/v1
+    kind: NetworkPolicy
+    metadata:
+      name: allow-egress-to-nginx-webhook
+      namespace: ingress-nginx
+    spec:
+      podSelector:
+      matchLabels:
+        app.kubernetes.io/name: ingress-nginx
+      policyTypes:
+      - Egress
+      egress:
+      - to:
+        - namespaceSelector:
+            matchLabels:
+              kubernetes.io/metadata.name: ingress-nginx
+          podSelector:
+            matchLabels:
+              app.kubernetes.io/component: controller
+        ports:
+        - protocol: TCP
+          port: 443
