fix: enable creategatewayclass

--- a/apps/network/cilium/helmrelease.yaml
+++ b/apps/network/cilium/helmrelease.yaml
@@ -44,5 +44,6 @@ spec:
     k8sServicePort: 7445                          
     gatewayAPI:
       enabled: true
+      createGatewayClass: true
       enableAlpn: true
       enableAppProtocol: true
