fix: add admissionwebhook to nginx-ingress helmrelease

--- a/apps/network/nginx-ingress/helmrelease.yaml
+++ b/apps/network/nginx-ingress/helmrelease.yaml
@@ -21,5 +21,9 @@ spec:
         type: LoadBalancer
       metrics:
         enabled: true
+      admissionWebhooks:
+        enabled: true
+        patch:
+          enabled: true
     defaultBackend:
       enabled: false
