feat: add deny default policy on apps namespace

--- a/apps/network/network-policy.yaml
+++ b/apps/network/network-policy.yaml
@@ -13,3 +13,15 @@ items:
       - Egress
       ingress: []
       egress: []
+  - apiVersion: networking.k8s.io/v1
+    kind: NetworkPolicy
+    metadata:
+      name: default-deny-all
+      namespace: apps
+    spec:
+      podSelector: {}
+      policyTypes:
+      - Ingress
+      - Egress
+      ingress: []
+      egress: []
