--- a/apps/miscellaneous/jellyfin/network-policy.yaml
+++ b/apps/miscellaneous/jellyfin/network-policy.yaml
@@ -81,6 +81,7 @@ items:
             - matchPattern: "*.omdbapi.com"
             - matchPattern: "*.fanart.tv"
             - matchPattern: "*.github.com"
+            - matchPattern: "*.githubusercontent.com"
             - matchPattern: "*.jellyfin.org"
           toPorts:
             - ports:
