fix: correct media network policies to allow jellyfin to fetch plugins

--- a/apps/miscellaneous/jellyfin/network-policy.yaml
+++ b/apps/miscellaneous/jellyfin/network-policy.yaml
@@ -83,6 +83,9 @@ items:
             - matchPattern: "*.github.com"
             - matchPattern: "*.githubusercontent.com"
             - matchPattern: "*.jellyfin.org"
+            - matchPattern: "*.mirror.jellyfin.org"
+            - matchName: "jellyfin.org"
+            - matchName: "github.com"
           toPorts:
             - ports:
               - port: "80"
