feat: update media network policies to add opensubtitle plugin to jellyfin

--- a/apps/miscellaneous/jellyfin/network-policy.yaml
+++ b/apps/miscellaneous/jellyfin/network-policy.yaml
@@ -84,6 +84,7 @@ items:
             - matchPattern: "*.githubusercontent.com"
             - matchPattern: "*.jellyfin.org"
             - matchPattern: "*.mirror.jellyfin.org"
+            - matchPattern: "api.opensubtitles.com"
             - matchName: "jellyfin.org"
             - matchName: "github.com"
           toPorts:
