--- a/apps/miscellaneous/jellyfin/jellyfin.yaml
+++ b/apps/miscellaneous/jellyfin/jellyfin.yaml
@@ -11,6 +11,11 @@ metadata:
     checkov.io/skip5: "CKV_K8S_40"
 spec:
   replicas: 1
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   selector:
     matchLabels:
       app: jellyfin
@@ -62,6 +67,12 @@ spec:
           limits:
             memory: "2Gi"
             cpu:    "1"
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 8080
+          initialDelaySeconds: 20
+          periodSeconds: 20
       volumes:
       - name: jellyfin-pvc
         persistentVolumeClaim:
