--- a/apps/network/network-policy.yaml
+++ b/apps/network/network-policy.yaml
@@ -49,3 +49,15 @@ items:
       - Egress
       ingress: []
       egress: []
+  - apiVersion: networking.k8s.io/v1
+    kind: NetworkPolicy
+    metadata:
+      name: default-deny-all
+      namespace: ingress-nginx
+    spec:
+      podSelector: {}
+      policyTypes:
+      - Ingress
+      - Egress
+      ingress: []
+      egress: []
