--- a/apps/miscellaneous/wikijs/helmrelease.yaml
+++ b/apps/miscellaneous/wikijs/helmrelease.yaml
@@ -8,7 +8,6 @@ spec:
   chart:
     spec:
       chart: wiki
-      version: ">=3.7.0"
       sourceRef:
         kind: HelmRepository
         name: wikijs
@@ -23,5 +22,5 @@ spec:
       retries: 3
   valuesFrom:
     - kind: Secret
-      name: wikijs-secret
+      name: wikijs-wikijs
       valuesKey: values.yaml
