fix: correct secret

--- a/apps/secrets/wikijs/wikijs-wikijs.yaml
+++ b/apps/secrets/wikijs/wikijs-wikijs.yaml
@@ -4,19 +4,20 @@ metadata:
     name: wikijs-wikijs
     namespace: wikijs
 stringData:
-    values.yaml: ENC[AES256_GCM,data:EwegiQBsJ/ICbtDfYv76Ko/2UgIgSoYVjEplloYQOjwSXS6jOGwInaZ5DTJbcR1Y2x14LyqWT4Voix+RN8+hizICcbLfTQ3pvvbgg4/HfKUTAVZ7cWEE/HZZKkD2yJrwnVqqquuTEb3ZLMJGPYzYU4ivSUW4Vkrueg4TTujiRNsqneOu2WJrve8wL3I8L6DnlyBNfSshKmv0uO6YAh9o6+YRGR6ybZrwzXVZwpFN2rjd7MVFvgio5IaCeQ==,iv:a69mId3l9MdSUUnPftDaD4buNuh03Io9tKlGBuCVzjc=,tag:ve6iYheK2kOyTSWX6nKauQ==,type:str]
+    postgresql-password: ENC[AES256_GCM,data:Q054WwtRP6cf,iv:/XIK+RNvB8Phb9Osb7ptNCLu1qeFcWcVHTx23acFrb8=,tag:7eoHgIeP6tgsg/iJruaE/Q==,type:str]
+    config.yml: ENC[AES256_GCM,data:rN9tsY4YwdN+ksFhvYL8oRQp7XRlWcl7c6UzApseYQ97fpL0p6ZTLY2cnbo9xIrSxxPetFUy8vrUBrEe8etb7gFbfZh4k23f6LOCwXYiRycESrEe5NbCg2boDjx1y3pGfpV00jP1ddK/PUN5v4xSDshrfvxbGmE6elm1iiKy4EPfiGlMloRIPrfqGO60dib/tI4bUanSwLmSiJ2OWTpENuW3K5+ovbOqew54QUp7uQM3hHXvIdPGazF2Iw==,iv:oT+R/xbCqrf170+apimtQiy/Bj8xJXxG2S6maPE9wKs=,tag:ZzmF6Tk36oiLhyw9keAy8A==,type:str]
 sops:
     age:
         - recipient: age1el6gjkfc3hz7u9ca6gxftsjzv266qj4j52qt2ug2f06q4latuaaqd8q0q2
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwRVkzVGt2bGY3Z2NtZTBS
-            U1Z0MDNnNG5SRDRPZnpzTTQ0OEpIdHR1eVZNCit4SzJ6S1ZXWGljVXhQZi9PdEhu
-            Tzk1eHFrYmU0VDJXTnpSQ0ptUzdsbVkKLS0tIDZlVDNOaDFBWVc3eE9xOG1TVDJn
-            RUNHdHp1OHh3V1BrQUFKMWVobkJWTEUKnzt0qnnMbYXVoTBKvjI0/G0hqyPmbtQI
-            2IyE9CB7JbJhSxPL6XAe981tqRkSb7b9EsdkJJlvP7twjW6LwMKeuw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJVjFKYkpzQ0ZKaktsRkho
+            UjhMZkFLTU1TTVZoWXphSm5ZWEtnUEdOeVVFCkQ2ZVBqdjM5VWphNGdqdHE5c1FQ
+            UFlveWFJUFRHcVhCK2NsYVQ3Nm1nb2cKLS0tIHBJUThLZHpDQlNIU2E0Y1JaSjJO
+            TFByMDhZZEFsQTdxeStNVHB3bFFVaEkKOx59R6eXFhlRy4NKSmYGo+yfhxkkOWBr
+            2BHMpD/ks1ED9tuxi0ZEd5fIG5lPOaHE0RUJJoGjUv/lfvRaMi3HiA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-05-15T08:29:06Z"
-    mac: ENC[AES256_GCM,data:Dw1JOutRCvitm9rBbamfKs7Z9DOuqMuUVtH4zXeA7Nk5huHEVzmMGDia1q9BS12TDaBFlHdl+BaiWq/3up9yHjMgq2H2pOIjAQZSAE6z8bS7EHZvq8K+D8+djqSS4TL/PcQW9KnpXV215j2c605Z6K4FyqFA9y+j9cK6iIpU668=,iv:l0sAH/y0jstTyAvfQNREJsZpPzfj7hlO4Qa3JnI0e8Y=,tag:MelVilcGlGYudmWZSEkKKw==,type:str]
+    lastmodified: "2025-05-15T08:43:16Z"
+    mac: ENC[AES256_GCM,data:mbqduWjyfauJ1HsfRENxcmtkHubvXw6vmVYoKvvx/OqP8NFvRAp05cDxUElWbIW04NrxN8FskvhwJLrqhxi5sLzMEnT3ZGdluA5Tg/eDZChzA8v+6Cacny+BHSzY2HN231JvUaGsbCDKZ8UPu/CH63DFa1ZHGwvD7PXJ9VSCZz0=,iv:w2oq1JBmgbGQL5ocn9Ealv4NAyIrsMRAQC0t+Xqx2Yg=,tag:47il781i5Y1UqYaeU4tZ/g==,type:str]
     encrypted_regex: ^(data|stringData)$
     version: 3.10.1
