--- a/apps/secrets/wikijs/wikijs-wikijs.yaml
+++ b/apps/secrets/wikijs/wikijs-wikijs.yaml
@@ -4,20 +4,19 @@ metadata:
     name: wikijs-wikijs
     namespace: wikijs
 stringData:
-    postgresql-password: ENC[AES256_GCM,data:Q054WwtRP6cf,iv:/XIK+RNvB8Phb9Osb7ptNCLu1qeFcWcVHTx23acFrb8=,tag:7eoHgIeP6tgsg/iJruaE/Q==,type:str]
-    config.yml: ENC[AES256_GCM,data:rN9tsY4YwdN+ksFhvYL8oRQp7XRlWcl7c6UzApseYQ97fpL0p6ZTLY2cnbo9xIrSxxPetFUy8vrUBrEe8etb7gFbfZh4k23f6LOCwXYiRycESrEe5NbCg2boDjx1y3pGfpV00jP1ddK/PUN5v4xSDshrfvxbGmE6elm1iiKy4EPfiGlMloRIPrfqGO60dib/tI4bUanSwLmSiJ2OWTpENuW3K5+ovbOqew54QUp7uQM3hHXvIdPGazF2Iw==,iv:oT+R/xbCqrf170+apimtQiy/Bj8xJXxG2S6maPE9wKs=,tag:ZzmF6Tk36oiLhyw9keAy8A==,type:str]
+    postgresql-password: ENC[AES256_GCM,data:deLGn2QTNCyM,iv:iJBXxgSKMvDkY42PoYQ2nuiwNkKUVeo9NGIqr0qN4FE=,tag:ouHG3Ymz1IeoX7UyOTa67g==,type:str]
 sops:
     age:
         - recipient: age1el6gjkfc3hz7u9ca6gxftsjzv266qj4j52qt2ug2f06q4latuaaqd8q0q2
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJVjFKYkpzQ0ZKaktsRkho
-            UjhMZkFLTU1TTVZoWXphSm5ZWEtnUEdOeVVFCkQ2ZVBqdjM5VWphNGdqdHE5c1FQ
-            UFlveWFJUFRHcVhCK2NsYVQ3Nm1nb2cKLS0tIHBJUThLZHpDQlNIU2E0Y1JaSjJO
-            TFByMDhZZEFsQTdxeStNVHB3bFFVaEkKOx59R6eXFhlRy4NKSmYGo+yfhxkkOWBr
-            2BHMpD/ks1ED9tuxi0ZEd5fIG5lPOaHE0RUJJoGjUv/lfvRaMi3HiA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKYnVxMCt0MGZDZTR2Uzl2
+            ZGtkb3d1dEwzVjNEaW10alBZSFQyUHVxYm1RCitWclR4WmIrL1dzOFA1SGJORnZ2
+            UWM1THdZVnh4OWtVMnNSVW8vSEpTdHMKLS0tIGlWNFdPbUhaZXdoSHNQZERvemtD
+            bFZQdU80OGlXRmFJVE5iWmhUR3BZaWsKmTpjWjGT40dcEmkLARtmkkQ5U2VlAivG
+            aM382/ySXqieoffKuNWmGxhKgzc2VXgqwAcgoERWczrAp7yTN4iqOg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-05-15T08:43:16Z"
-    mac: ENC[AES256_GCM,data:mbqduWjyfauJ1HsfRENxcmtkHubvXw6vmVYoKvvx/OqP8NFvRAp05cDxUElWbIW04NrxN8FskvhwJLrqhxi5sLzMEnT3ZGdluA5Tg/eDZChzA8v+6Cacny+BHSzY2HN231JvUaGsbCDKZ8UPu/CH63DFa1ZHGwvD7PXJ9VSCZz0=,iv:w2oq1JBmgbGQL5ocn9Ealv4NAyIrsMRAQC0t+Xqx2Yg=,tag:47il781i5Y1UqYaeU4tZ/g==,type:str]
+    lastmodified: "2025-05-15T08:53:31Z"
+    mac: ENC[AES256_GCM,data:Z73R/MDKo7UkvweKEthIVd/UOZbFj0ypuxQuCTLvmcUuSkSPN2fnQe1lcfybmYY7FOL642TU61go1/IffQQO/cPTzTs4yIsSgK1QrNA4ls1cUVHfyW18uZqSNSB6M1BEbQH73wUuDAIwrLMX5Scieoit+YnFjJMvxOX0Td6t7ME=,iv:zY0co4OvfBkoCGKLVOQvVsTf2kIk7A7v/D5xZtKehzQ=,tag:d87X+f4QHV3SDeEhKfwbJw==,type:str]
     encrypted_regex: ^(data|stringData)$
     version: 3.10.1
