--- a/apps/network/nginx-ingress/helmrelease.yaml
+++ b/apps/network/nginx-ingress/helmrelease.yaml
@@ -19,6 +19,10 @@ spec:
       replicaCount: 2
       service:
         type: LoadBalancer
+      reportIngressStatus: true
+      publishService:
+        enabled: true
+        pathOverride: ingress-nginx/ingress-nginx-controller
       metrics:
         enabled: true
       admissionWebhooks:
