--- a/apps/network/metallb/metallb-ip-pool.yaml
+++ b/apps/network/metallb/metallb-ip-pool.yaml
@@ -2,7 +2,7 @@ apiVersion: metallb.io/v1beta1
 kind: IPAddressPool
 metadata:
   name: default
-  namespace: kube-system
+  namespace: metallb-system
 spec:
   addresses:
     - 10.0.0.200-10.0.0.254
@@ -13,7 +13,7 @@ apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
 metadata:
   name: l2advertisement
-  namespace: kube-system
+  namespace: metallb-system
 spec:
   ipAddressPools:
   - default
