fix: correct typo

--- a/apps/network/nginx-ingress/helmrelease.yaml
+++ b/apps/network/nginx-ingress/helmrelease.yaml
@@ -5,6 +5,12 @@ metadata:
   namespace: ingress-nginx
 spec:
   interval: 15m
+  install:
+    createNamespace: true
+    crds: Create
+  upgrade:
+    remediation:
+      retries: 1
   chart:
     spec:
       chart: ingress-nginx
