--- a/apps/network/nginx-ingress/kustomization.yaml
+++ b/apps/network/nginx-ingress/kustomization.yaml
@@ -1,5 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+spec:
+  dependsOn:
+    - name: metallb
 resources:
   - https://raw.githubusercontent.com/nginx/kubernetes-ingress/v5.0.0/deploy/crds.yaml
   - namespace.yaml
